[package]
name = "smart_street_light_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11.8"
log = "0.4"
serialport = "4.2"
chrono = { version = "0.4", features = ["serde"] }